完成代码沙箱的模板方法，解决了代码执行提前结束的问题（awaitCompletion里的时间放宽），并利用countdownlatch兜底，保证后续的赋值不会提前执行（同步）